src/wrapper/torch_api_generated.h

void atg_dot_out(tensor *, tensor result, tensor self, tensor tensor);
void atg_dropout(tensor *, tensor input, double p, int train);
void atg_dropout_(tensor *, tensor self, double p, int train);
void atg_eig(tensor *, tensor self, int eigenvectors);
void atg_eig_out(tensor *, tensor res1, tensor res2, tensor self, int eigenvectors);
void atg_elu(tensor *, tensor self);
void atg_elu_(tensor *, tensor self);
void atg_elu_out(tensor *, tensor output, tensor self);
void atg_embedding(tensor *, tensor weight, tensor indices, int64_t padding_idx, int scale_grad_by_freq, int sparse);
void atg_embedding_backward(tensor *, tensor grad, tensor indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq, int sparse);
void atg_embedding_bag(tensor *, tensor weight, tensor indices, tensor offsets, int scale_grad_by_freq, int64_t mode, int sparse);
void atg_embedding_dense_backward(tensor *, tensor grad, tensor indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
void atg_embedding_renorm_(tensor *, tensor self, tensor indices, double max_norm, double norm_type);
void atg_embedding_sparse_backward(tensor *, tensor grad, tensor indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
void atg_empty(tensor *, long int *size_data, int size_len, int options_kind, int options_device);
void atg_empty_like1(tensor *, tensor self);
void atg_empty_like2(tensor *, tensor self, int options_kind, int options_device);
void atg_empty_out(tensor *, tensor result, long int *size_data, int size_len);
void atg_empty_strided(tensor *, long int *size_data, int size_len, long int *stride_data, int stride_len, int options_kind, int options_device);
void atg_eq(tensor *, tensor self, tensor other);
void atg_eq_(tensor *, tensor self, tensor other);
void atg_eq_out(tensor *, tensor result, tensor self, tensor other);
void atg_erf(tensor *, tensor self);
void atg_erf_(tensor *, tensor self);
void atg_erf_out(tensor *, tensor result, tensor self);
void atg_erfc(tensor *, tensor self);
void atg_erfc_(tensor *, tensor self);
void atg_erfc_out(tensor *, tensor result, tensor self);
void atg_erfinv(tensor *, tensor self);
void atg_erfinv_(tensor *, tensor self);
void atg_erfinv_out(tensor *, tensor result, tensor self);
void atg_exp(tensor *, tensor self);
void atg_exp_(tensor *, tensor self);
void atg_exp_out(tensor *, tensor result, tensor self);
void atg_expand(tensor *, tensor self, long int *size_data, int size_len, int implicit);
void atg_expand_as(tensor *, tensor self, tensor other);
void atg_expm1(tensor *, tensor self);
void atg_expm1_(tensor *, tensor self);
void atg_expm1_out(tensor *, tensor result, tensor self);
void atg_exponential_(tensor *, tensor self, double lambd);
void atg_eye1(tensor *, int64_t n, int options_kind, int options_device);
void atg_eye2(tensor *, int64_t n, int64_t m, int options_kind, int options_device);
void atg_eye_out1(tensor *, tensor result, int64_t n);
void atg_eye_out2(tensor *, tensor result, int64_t n, int64_t m);
void atg_feature_alpha_dropout(tensor *, tensor input, double p, int train);
void atg_feature_alpha_dropout_(tensor *, tensor self, double p, int train);
void atg_feature_dropout(tensor *, tensor input, double p, int train);
void atg_feature_dropout_(tensor *, tensor self, double p, int train);
void atg_fft(tensor *, tensor self, int64_t signal_ndim, int normalized);
void atg_fill_(tensor *, tensor self, tensor value);
void atg_fill_1(tensor *, tensor self, scalar value);
void atg_flatten(tensor *, tensor self, int64_t start_dim, int64_t end_dim);
void atg_flip(tensor *, tensor self, long int *dims_data, int dims_len);
void atg_floor(tensor *, tensor self);
void atg_floor_(tensor *, tensor self);
void atg_floor_out(tensor *, tensor result, tensor self);
void atg_fmod(tensor *, tensor self, tensor other);
void atg_fmod_(tensor *, tensor self, tensor other);
void atg_fmod_out(tensor *, tensor result, tensor self, tensor other);
void atg_frac(tensor *, tensor self);
void atg_frac_(tensor *, tensor self);
void atg_frac_out(tensor *, tensor result, tensor self);
void atg_fractional_max_pool2d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *output_size_data, int output_size_len, tensor random_samples);
void atg_fractional_max_pool2d_backward(tensor *, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *output_size_data, int output_size_len, tensor indices);
void atg_fractional_max_pool2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *output_size_data, int output_size_len, tensor indices);
void atg_fractional_max_pool2d_forward(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *output_size_data, int output_size_len, tensor random_samples);
void atg_fractional_max_pool2d_forward_out(tensor *, tensor output, tensor indices, tensor self, long int *kernel_size_data, int kernel_size_len, long int *output_size_data, int output_size_len, tensor random_samples);
void atg_fractional_max_pool2d_out(tensor *, tensor output, tensor indices, tensor self, long int *kernel_size_data, int kernel_size_len, long int *output_size_data, int output_size_len, tensor random_samples);
void atg_frobenius_norm1(tensor *, tensor self);
void atg_frobenius_norm2(tensor *, tensor self, long int *dim_data, int dim_len, int keepdim);
void atg_frobenius_norm_out(tensor *, tensor result, tensor self, long int *dim_data, int dim_len, int keepdim);
void atg_full(tensor *, long int *size_data, int size_len, scalar fill_value, int options_kind, int options_device);
void atg_full_like1(tensor *, tensor self, scalar fill_value);
void atg_full_like2(tensor *, tensor self, scalar fill_value, int options_kind, int options_device);
void atg_full_out(tensor *, tensor result, long int *size_data, int size_len, scalar fill_value);
void atg_gather(tensor *, tensor self, int64_t dim, tensor index);
void atg_gather_out(tensor *, tensor result, tensor self, int64_t dim, tensor index);
void atg_ge(tensor *, tensor self, tensor other);
void atg_ge_(tensor *, tensor self, tensor other);
void atg_ge_out(tensor *, tensor result, tensor self, tensor other);
void atg_gels(tensor *, tensor self, tensor A);
void atg_gels_out(tensor *, tensor res1, tensor res2, tensor self, tensor A);
void atg_geometric_(tensor *, tensor self, double p);
void atg_geqrf(tensor *, tensor self);
void atg_geqrf_out(tensor *, tensor res1, tensor res2, tensor self);
void atg_ger(tensor *, tensor self, tensor vec2);
void atg_ger_out(tensor *, tensor result, tensor self, tensor vec2);
void atg_gesv(tensor *, tensor self, tensor A);
void atg_gesv_out(tensor *, tensor solution, tensor lu, tensor self, tensor A);
void atg_glu(tensor *, tensor self, int64_t dim);
void atg_glu_backward(tensor *, tensor grad_output, tensor self, int64_t dim);
void atg_glu_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, int64_t dim);
void atg_glu_forward(tensor *, tensor self, int64_t dim);
void atg_glu_forward_out(tensor *, tensor output, tensor self, int64_t dim);
void atg_glu_out(tensor *, tensor output, tensor self, int64_t dim);
void atg_grad(tensor *, tensor self);
void atg_grid_sampler(tensor *, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_2d(tensor *, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_2d_backward(tensor *, tensor grad_output, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_3d(tensor *, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_3d_backward(tensor *, tensor grad_output, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_gru1(tensor *, tensor input, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
void atg_gru2(tensor *, tensor data, tensor batch_sizes, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
void atg_gru_cell(tensor *, tensor input, tensor hx, tensor w_ih, tensor w_hh, tensor b_ih, tensor b_hh);
void atg_gt(tensor *, tensor self, tensor other);
void atg_gt_(tensor *, tensor self, tensor other);
void atg_gt_out(tensor *, tensor result, tensor self, tensor other);
void atg_hamming_window1(tensor *, int64_t window_length, int options_kind, int options_device);
void atg_hamming_window2(tensor *, int64_t window_length, int periodic, int options_kind, int options_device);
void atg_hamming_window3(tensor *, int64_t window_length, int periodic, double alpha, int options_kind, int options_device);
void atg_hamming_window4(tensor *, int64_t window_length, int periodic, double alpha, double beta, int options_kind, int options_device);
void atg_hann_window1(tensor *, int64_t window_length, int options_kind, int options_device);
void atg_hann_window2(tensor *, int64_t window_length, int periodic, int options_kind, int options_device);
void atg_hardshrink(tensor *, tensor self);