src/stubs/torch_bindings_generated.ml


  let dot_out =
    foreign "atg_dot_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let dropout =
    foreign "atg_dropout"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let dropout_ =
    foreign "atg_dropout_"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let eig =
    foreign "atg_eig"
    (ptr t @-> t @-> int @-> returning void)

  let eig_out =
    foreign "atg_eig_out"
    (ptr t @-> t @-> t @-> t @-> int @-> returning void)

  let elu =
    foreign "atg_elu"
    (ptr t @-> t @-> returning void)

  let elu_ =
    foreign "atg_elu_"
    (ptr t @-> t @-> returning void)

  let elu_out =
    foreign "atg_elu_out"
    (ptr t @-> t @-> t @-> returning void)

  let embedding =
    foreign "atg_embedding"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let embedding_backward =
    foreign "atg_embedding_backward"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> int @-> int @-> returning void)

  let embedding_bag =
    foreign "atg_embedding_bag"
    (ptr t @-> t @-> t @-> t @-> int @-> int64_t @-> int @-> returning void)

  let embedding_dense_backward =
    foreign "atg_embedding_dense_backward"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> int @-> returning void)

  let embedding_renorm_ =
    foreign "atg_embedding_renorm_"
    (ptr t @-> t @-> t @-> double @-> double @-> returning void)

  let embedding_sparse_backward =
    foreign "atg_embedding_sparse_backward"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> int @-> returning void)

  let empty =
    foreign "atg_empty"
    (ptr t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let empty_like1 =
    foreign "atg_empty_like1"
    (ptr t @-> t @-> returning void)

  let empty_like2 =
    foreign "atg_empty_like2"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let empty_out =
    foreign "atg_empty_out"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let empty_strided =
    foreign "atg_empty_strided"
    (ptr t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let eq =
    foreign "atg_eq"
    (ptr t @-> t @-> t @-> returning void)

  let eq_ =
    foreign "atg_eq_"
    (ptr t @-> t @-> t @-> returning void)

  let eq_out =
    foreign "atg_eq_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let erf =
    foreign "atg_erf"
    (ptr t @-> t @-> returning void)

  let erf_ =
    foreign "atg_erf_"
    (ptr t @-> t @-> returning void)

  let erf_out =
    foreign "atg_erf_out"
    (ptr t @-> t @-> t @-> returning void)

  let erfc =
    foreign "atg_erfc"
    (ptr t @-> t @-> returning void)

  let erfc_ =
    foreign "atg_erfc_"
    (ptr t @-> t @-> returning void)

  let erfc_out =
    foreign "atg_erfc_out"
    (ptr t @-> t @-> t @-> returning void)

  let erfinv =
    foreign "atg_erfinv"
    (ptr t @-> t @-> returning void)

  let erfinv_ =
    foreign "atg_erfinv_"
    (ptr t @-> t @-> returning void)

  let erfinv_out =
    foreign "atg_erfinv_out"
    (ptr t @-> t @-> t @-> returning void)

  let exp =
    foreign "atg_exp"
    (ptr t @-> t @-> returning void)

  let exp_ =
    foreign "atg_exp_"
    (ptr t @-> t @-> returning void)

  let exp_out =
    foreign "atg_exp_out"
    (ptr t @-> t @-> t @-> returning void)

  let expand =
    foreign "atg_expand"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let expand_as =
    foreign "atg_expand_as"
    (ptr t @-> t @-> t @-> returning void)

  let expm1 =
    foreign "atg_expm1"
    (ptr t @-> t @-> returning void)

  let expm1_ =
    foreign "atg_expm1_"
    (ptr t @-> t @-> returning void)

  let expm1_out =
    foreign "atg_expm1_out"
    (ptr t @-> t @-> t @-> returning void)

  let exponential_ =
    foreign "atg_exponential_"
    (ptr t @-> t @-> double @-> returning void)

  let eye1 =
    foreign "atg_eye1"
    (ptr t @-> int64_t @-> int @-> int @-> returning void)

  let eye2 =
    foreign "atg_eye2"
    (ptr t @-> int64_t @-> int64_t @-> int @-> int @-> returning void)

  let eye_out1 =
    foreign "atg_eye_out1"
    (ptr t @-> t @-> int64_t @-> returning void)

  let eye_out2 =
    foreign "atg_eye_out2"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let feature_alpha_dropout =
    foreign "atg_feature_alpha_dropout"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let feature_alpha_dropout_ =
    foreign "atg_feature_alpha_dropout_"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let feature_dropout =
    foreign "atg_feature_dropout"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let feature_dropout_ =
    foreign "atg_feature_dropout_"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let fft =
    foreign "atg_fft"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let fill_ =
    foreign "atg_fill_"
    (ptr t @-> t @-> t @-> returning void)

  let fill_1 =
    foreign "atg_fill_1"
    (ptr t @-> t @-> scalar @-> returning void)

  let flatten =
    foreign "atg_flatten"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let flip =
    foreign "atg_flip"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let floor =
    foreign "atg_floor"
    (ptr t @-> t @-> returning void)

  let floor_ =
    foreign "atg_floor_"
    (ptr t @-> t @-> returning void)

  let floor_out =
    foreign "atg_floor_out"
    (ptr t @-> t @-> t @-> returning void)

  let fmod =
    foreign "atg_fmod"
    (ptr t @-> t @-> t @-> returning void)

  let fmod_ =
    foreign "atg_fmod_"
    (ptr t @-> t @-> t @-> returning void)

  let fmod_out =
    foreign "atg_fmod_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let frac =
    foreign "atg_frac"
    (ptr t @-> t @-> returning void)

  let frac_ =
    foreign "atg_frac_"
    (ptr t @-> t @-> returning void)

  let frac_out =
    foreign "atg_frac_out"
    (ptr t @-> t @-> t @-> returning void)

  let fractional_max_pool2d =
    foreign "atg_fractional_max_pool2d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> t @-> returning void)

  let fractional_max_pool2d_backward =
    foreign "atg_fractional_max_pool2d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> t @-> returning void)

  let fractional_max_pool2d_backward_out =
    foreign "atg_fractional_max_pool2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> t @-> returning void)

  let fractional_max_pool2d_forward =
    foreign "atg_fractional_max_pool2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> t @-> returning void)

  let fractional_max_pool2d_forward_out =
    foreign "atg_fractional_max_pool2d_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> t @-> returning void)

  let fractional_max_pool2d_out =
    foreign "atg_fractional_max_pool2d_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> t @-> returning void)

  let frobenius_norm1 =
    foreign "atg_frobenius_norm1"
    (ptr t @-> t @-> returning void)

  let frobenius_norm2 =
    foreign "atg_frobenius_norm2"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let frobenius_norm_out =
    foreign "atg_frobenius_norm_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let full =
    foreign "atg_full"
    (ptr t @-> ptr long @-> int @-> scalar @-> int @-> int @-> returning void)

  let full_like1 =
    foreign "atg_full_like1"
    (ptr t @-> t @-> scalar @-> returning void)

  let full_like2 =
    foreign "atg_full_like2"
    (ptr t @-> t @-> scalar @-> int @-> int @-> returning void)

  let full_out =
    foreign "atg_full_out"
    (ptr t @-> t @-> ptr long @-> int @-> scalar @-> returning void)

  let gather =
    foreign "atg_gather"
    (ptr t @-> t @-> int64_t @-> t @-> returning void)

  let gather_out =
    foreign "atg_gather_out"
    (ptr t @-> t @-> t @-> int64_t @-> t @-> returning void)

  let ge =
    foreign "atg_ge"
    (ptr t @-> t @-> t @-> returning void)

  let ge_ =
    foreign "atg_ge_"
    (ptr t @-> t @-> t @-> returning void)

  let ge_out =
    foreign "atg_ge_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let gels =
    foreign "atg_gels"
    (ptr t @-> t @-> t @-> returning void)

  let gels_out =
    foreign "atg_gels_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let geometric_ =
    foreign "atg_geometric_"
    (ptr t @-> t @-> double @-> returning void)

  let geqrf =
    foreign "atg_geqrf"
    (ptr t @-> t @-> returning void)

  let geqrf_out =
    foreign "atg_geqrf_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let ger =
    foreign "atg_ger"
    (ptr t @-> t @-> t @-> returning void)

  let ger_out =
    foreign "atg_ger_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let gesv =
    foreign "atg_gesv"
    (ptr t @-> t @-> t @-> returning void)

  let gesv_out =
    foreign "atg_gesv_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let glu =
    foreign "atg_glu"
    (ptr t @-> t @-> int64_t @-> returning void)

  let glu_backward =
    foreign "atg_glu_backward"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let glu_backward_out =
    foreign "atg_glu_backward_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let glu_forward =
    foreign "atg_glu_forward"
    (ptr t @-> t @-> int64_t @-> returning void)

  let glu_forward_out =
    foreign "atg_glu_forward_out"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let glu_out =
    foreign "atg_glu_out"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let grad =
    foreign "atg_grad"
    (ptr t @-> t @-> returning void)

  let grid_sampler =
    foreign "atg_grid_sampler"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let grid_sampler_2d =
    foreign "atg_grid_sampler_2d"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let grid_sampler_2d_backward =
    foreign "atg_grid_sampler_2d_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let grid_sampler_3d =
    foreign "atg_grid_sampler_3d"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let grid_sampler_3d_backward =
    foreign "atg_grid_sampler_3d_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let gru1 =
    foreign "atg_gru1"
    (ptr t @-> t @-> t @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> int @-> returning void)

  let gru2 =
    foreign "atg_gru2"
    (ptr t @-> t @-> t @-> t @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> returning void)

  let gru_cell =
    foreign "atg_gru_cell"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> t @-> returning void)

  let gt =
    foreign "atg_gt"
    (ptr t @-> t @-> t @-> returning void)

  let gt_ =
    foreign "atg_gt_"
    (ptr t @-> t @-> t @-> returning void)

  let gt_out =
    foreign "atg_gt_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let hamming_window1 =
    foreign "atg_hamming_window1"
    (ptr t @-> int64_t @-> int @-> int @-> returning void)

  let hamming_window2 =
    foreign "atg_hamming_window2"
    (ptr t @-> int64_t @-> int @-> int @-> int @-> returning void)

  let hamming_window3 =
    foreign "atg_hamming_window3"
    (ptr t @-> int64_t @-> int @-> double @-> int @-> int @-> returning void)

  let hamming_window4 =
    foreign "atg_hamming_window4"
    (ptr t @-> int64_t @-> int @-> double @-> double @-> int @-> int @-> returning void)

  let hann_window1 =
    foreign "atg_hann_window1"
    (ptr t @-> int64_t @-> int @-> int @-> returning void)

  let hann_window2 =
    foreign "atg_hann_window2"
    (ptr t @-> int64_t @-> int @-> int @-> int @-> returning void)

  let hardshrink =
    foreign "atg_hardshrink"
    (ptr t @-> t @-> returning void)
